# game-of-life

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  utils.rs
www/: .babelrc  index.html  index.js  package-lock.json  package.json  three-model.js  tsconfig.json  two-model.js  utils.js  webpack.config.js
www/src/: index.html  index.ts  three-model.ts  types.ts  utils.ts
www/src/js/: bootstrap.js
www/src/ts/: index.ts  info-model.ts  three-model.ts  two-model.ts  types.ts  utils.ts
