[package]
name = "game-of-life-3d"
version = "1.1.0"
authors = ["Gerard Klijs <g.klijs@gmail.com>"]
description = "3d wasm version of game of life"
homepage = "https://github.com/gklijs/game-of-life"
repository = "https://github.com/gklijs/game-of-life"
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
js-sys = "0.2"
fixedbitset = "0.1.9"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[profile.release]
debug = false
lto = true
opt-level = 's'